--- a/.github/workflows/github-actions-genpod.yml
+++ b/.github/workflows/github-actions-genpod.yml
@@ -1,7 +1,7 @@
 name: Run Arxiv Script
 on:
   schedule:
-    - cron: '0 0 * * *' # This schedules the action to run every day at midnight
+    - cron: '0 8 * * *' # This schedules the action to run every day at 8am UTC which is 4am EDT
   workflow_dispatch: # This allows manual triggering
 jobs:
   run-scripts:
