--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-openai==0.27.0
-tiktoken==0.3.0
-structlog==22.3.0
-cachetools==5.2.0
+openai
+tiktoken
+structlog
+cachetools
 IPython
 gtts
 PyGithub
