--- a/.github/workflows/github-actions-genpod.yml
+++ b/.github/workflows/github-actions-genpod.yml
@@ -5,11 +5,8 @@ on:
   workflow_dispatch: # This allows manual triggering
 jobs:
   run-scripts:
-    name: Run arxiv script for ${{ matrix.category }}
+    name: Run arxiv script
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        category: ["cs", "q-bio", "econ", "stat", "q-fin"]
     env:
       OPENAI_KEY: ${{ secrets.OPENAI_KEY }}
       GH_KEY: ${{ secrets.GH_KEY }}
@@ -25,6 +22,20 @@ jobs:
       # Step 3: Install dependencies if any (uncomment if needed)
       - name: Install dependencies
         run: pip install -r requirements.txt
-      # Step 4: Run the Python script
-      - name: Run arxiv script ${{ matrix.category }}
-        run: python -c 'from arxiv_langchain import run; run("${{ matrix.category }}")'
+
+      # Step 4: Run the Python script for 'cs'
+      - name: Run arxiv script for cs
+        run: python -c 'from arxiv_langchain import run; run("cs")' || echo fail
+
+      # Repeat Step 4 for other categories
+      - name: Run arxiv script for q-bio
+        run: python -c 'from arxiv_langchain import run; run("q-bio")' || echo fail
+
+      - name: Run arxiv script for econ
+        run: python -c 'from arxiv_langchain import run; run("econ")' || echo fail
+
+      - name: Run arxiv script for stat
+        run: python -c 'from arxiv_langchain import run; run("stat")' || echo fail
+
+      - name: Run arxiv script for q-fin
+        run: python -c 'from arxiv_langchain import run; run("q-fin")' || echo fail
