--- a/.github/workflows/github-actions-genpod.yml
+++ b/.github/workflows/github-actions-genpod.yml
@@ -22,6 +22,13 @@ jobs:
       # Step 3: Install dependencies if any (uncomment if needed)
       - name: Install dependencies
         run: pip install -r requirements.txt
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
+
 
       # Step 4: Run the Python script for 'cs'
       - name: Run arxiv script for cs
