--- a/.github/workflows/github-actions-moneystuffpod.yml
+++ b/.github/workflows/github-actions-moneystuffpod.yml
@@ -14,6 +14,8 @@ jobs:
       # Step 1: Checkout the repository
       - name: Checkout code
         uses: actions/checkout@v2
+      - name: setup-ffmpeg
+        uses: FedericoCarboni/setup-ffmpeg@v2
       # Step 2: Setup Python
       - name: Set up Python
         uses: actions/setup-python@v2
