--- a/.github/workflows/github-actions-moneystuffpod.yml
+++ b/.github/workflows/github-actions-moneystuffpod.yml
@@ -24,6 +24,12 @@ jobs:
       # Step 3: Install dependencies if any (uncomment if needed)
       - name: Install dependencies
         run: pip install -r requirements.txt
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
       # Step 4: Run the Python script
       - name: Run mstuff
         run: python -c 'from MoneyStuff import run; run()'
