--- a/.github/workflows/github-actions-genpod.yml
+++ b/.github/workflows/github-actions-genpod.yml
@@ -41,8 +41,10 @@ jobs:
         run: python -c 'from arxiv_langchain import run; run("cs")' || echo fail
 
       # Repeat Step 4 for other categories
-      - name: Run arxiv script for psyarxiv
-        run: python -c 'from arxiv_langchain import run; run("psyarxiv")' || echo fail
+      - name: Run arxiv script for osf
+        run: python -c 'from arxiv_langchain import run; run("osf")' || echo fail
 
+      - name: Run arxiv script for econpapers
+        run: python -c 'from arxiv_langchain import run; run("econpapers")' || echo fail
       - name: Run arxiv script for q-fin
         run: python -c 'from arxiv_langchain import run; run("q-fin")' || echo fail
