--- a/.github/workflows/github-actions-moneystuffpod.yml
+++ b/.github/workflows/github-actions-moneystuffpod.yml
@@ -32,6 +32,10 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
+      - name: Authenticate to Google Cloud
+        uses: google-github-actions/auth@v0.4.0
+        with:
+          credentials_json: ${{ secrets.GOOGLE_CREDENTIALS }}
       # Step 4: Run the Python script
       - name: Run mstuff
         run: python -c 'from MoneyStuff import run; run()'
