--- a/.github/workflows/github-actions-lions.yml
+++ b/.github/workflows/github-actions-lions.yml
@@ -25,6 +25,7 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: '3.11.x'
+          cache: 'pip' # caching pip dependencies
       # Step 3: Install dependencies if any (uncomment if needed)
       - name: Install dependencies
         run: pip install -r requirements.txt
@@ -33,5 +34,5 @@ jobs:
         with:
           credentials_json: ${{ secrets.GOOGLE_CREDENTIALS }}
       # Step 4: Run the Python script
-      - name: Run jonreads
+      - name: Run lions
         run: python -c 'import Lions'
