--- a/.github/workflows/github-actions-genpod.yml
+++ b/.github/workflows/github-actions-genpod.yml
@@ -3,6 +3,7 @@ on:
   schedule:
     - cron: '6 8 * * 1'
   workflow_dispatch: # This allows manual triggering
+
 jobs:
   run-scripts:
     name: Run arxiv script
@@ -16,34 +17,43 @@ jobs:
     steps:
       # Step 1: Checkout the repository
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4 # Updated from @v2
+
       - name: setup-ffmpeg
         uses: FedericoCarboni/setup-ffmpeg@v2
+
       # Step 2: Setup Python
       - name: Set up Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v5 # Updated from @v2
         with:
-          python-version: '3.11.x'
-      # Step 3: Install dependencies if any (uncomment if needed)
+          python-version: '3.11' # '.x' is often not needed, '3.11' is usually sufficient
+
+      # Step 3: Install dependencies
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: |
+          python -m pip install --upgrade pip setuptools wheel
+          pip cache purge # Optional: Clears pip cache
+          pip install -r requirements.txt
+
       - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v1
+        uses: aws-actions/configure-aws-credentials@v1 # Consider updating if a newer major version (e.g., @v4) is available and compatible
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
+
       - name: Authenticate to Google Cloud
-        uses: google-github-actions/auth@v0.4.0
+        uses: google-github-actions/auth@v2 # Updated from @v0.4.0 (check for latest version)
         with:
           credentials_json: ${{ secrets.GOOGLE_CREDENTIALS }}
 
       # Step 4: Run the Python script for 'cs'
       - name: Run arxiv script for cs
-        run: python -c 'from arxiv_langchain import run; run("cs")' || echo fail
+        run: python -c 'from arxiv_langchain import run; run("cs")' || echo "Running script for cs failed" # Added more descriptive echo
 
       # Repeat Step 4 for other categories
       - name: Run arxiv script for osf
-        run: python -c 'from arxiv_langchain import run; run("osf")' || echo fail
+        run: python -c 'from arxiv_langchain import run; run("osf")' || echo "Running script for osf failed"
+
       - name: Run arxiv script for q-fin
-        run: python -c 'from arxiv_langchain import run; run("q-fin")' || echo fail
+        run: python -c 'from arxiv_langchain import run; run("q-fin")' || echo "Running script for q-fin failed"
